--- a/app/app.css
+++ b/app/app.css
@@ -1,5 +1,9 @@
 /* app css stylesheet */
 
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
 .menu {
   list-style: none;
   border-bottom: 0.1em solid black;
